--- a/react/formik-json-blog/package.json
+++ b/react/formik-json-blog/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
