--- a/redux-toolkit/basic-authentication/package.json
+++ b/redux-toolkit/basic-authentication/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
