--- a/redux-toolkit/pagination/package.json
+++ b/redux-toolkit/pagination/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appointment",
+  "name": "pagination",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,15 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
-    "yup": "^1.4.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
