--- a/backend/email/package.json
+++ b/backend/email/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "backend",
+  "name": "email",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,13 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cloudinary": "^2.5.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.2",
-    "multer": "^1.4.5-lts.1"
+    "nodemailer": "^6.9.16"
   }
 }
