--- a/fullstack/e-commerce/frontend/package.json
+++ b/fullstack/e-commerce/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.6",
